--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,3 +21,7 @@ steps:
     testResultsFiles: '**/*.trx'
 
 - task: PublishBuildArtifacts@1
+
+- task: PublishBuildArtifacts@1
+
+- task: PublishBuildArtifacts@1
