--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,20 +8,38 @@ variables:
   buildConfiguration: 'Release'
   anotherVariable: 'me'
 
-steps:
-- script: |
-    dotnet build --configuration $(buildConfiguration)
-    dotnet test dotnetcore-tests --configuration $(buildConfiguration) --logger trx
-    dotnet publish --configuration $(buildConfiguration) --output $BUILD_ARTIFACTSTAGINGDIRECTORY
+jobs:
+  - job: a
+    steps:
+    - script: |
+        dotnet build --configuration $(buildConfiguration)
+        dotnet test dotnetcore-tests --configuration $(buildConfiguration) --logger trx
+        dotnet publish --configuration $(buildConfiguration) --output $BUILD_ARTIFACTSTAGINGDIRECTORY
 
-- task: PublishTestResults@2
-  condition: succeededOrFailed()
-  inputs:
-    testRunner: VSTest
-    testResultsFiles: '**/*.trx'
+    - task: PublishTestResults@2
+      condition: succeededOrFailed()
+      inputs:
+        testRunner: VSTest
+        testResultsFiles: '**/*.trx'
 
-- task: PublishBuildArtifacts@1
+    - task: PublishBuildArtifacts@1
 
-- task: PublishBuildArtifacts@1
+    - task: PublishBuildArtifacts@1
 
-- task: PublishBuildArtifacts@1
+  - job: b
+    steps:
+    - script: |
+        dotnet build --configuration $(buildConfiguration)
+        dotnet test dotnetcore-tests --configuration $(buildConfiguration) --logger trx
+        dotnet publish --configuration $(buildConfiguration) --output $BUILD_ARTIFACTSTAGINGDIRECTORY
+
+    - task: PublishTestResults@2
+      condition: succeededOrFailed()
+      inputs:
+        testRunner: VSTest
+        testResultsFiles: '**/*.trx'
+
+    - task: PublishBuildArtifacts@1
+
+    - task: PublishBuildArtifacts@1
+
